# checkMyC

./: .gitignore  README.md  config.toml  gold_selection.py  pyproject.toml
aggregator/: aggregator.py  sys_aggregator.md  usr_aggregator.md
resources/20180720/: 20180720_programmazione(old).txt  20180720_programmazione.md  soluzione.c
resources/20180720/not/: old_soluzione.c  ottimo.c
resources/20220728/: 20220728_programmazione(old).txt  20220728_programmazione.md  soluzione.c  soluzione_improved.c
resources/20220728/not/: old_soluzione.c
src/checkmyc/: __main__.py
src/checkmyc/api/: google_api.py  model_runner.py  openai_api.py  openrouter_api.py  utils_api.py
src/checkmyc/code/: config.py  evals.py
src/checkmyc/config/: llm.toml  questions.toml
src/checkmyc/data/prompts/system/: context.md  no_context.md  sp6.md  sp7.md  with_reasoning.md
src/checkmyc/data/prompts/topics/: code_gen.md  data.md  errors.md  mem.md  mod.md
src/checkmyc/data/prompts/user/: context.md  no_context.md  up5.md
src/checkmyc/data/templates/: report_template.html
src/checkmyc/data/topics/: code_gen.md  data.md  errors.md  mem.md  mod.md
