[project]
name = "checkmyc"
version = "0.1.0"
description = "Automated evaluation system for programs with LLM support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "jinja2",
    "requests",
    "google",
    "google-genai>=1.48.0",
]

[project.scripts]
checkmyc = "checkmyc.__main__:main"

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "analysis",
]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
unsafe-fixes = false
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # import order (isort)
  "B",   # bugbear
  "C4",  # comprehensions
  "SIM", # simplify
  "UP",  # pyupgrade
]
lint.ignore = [
    "E501",  # line too long (Black handles it)
]
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["pythonProject3"]
combine-as-imports = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]

